install-usb-gui (0.0.12) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 16 Oct 2007 12:04:51 +0200

install-usb-gui (0.0.11) unstable; urgency=low

  [ Horst Tritremmel ]
  * cheatcodes handling now with entry label
  * do not depend on gawk

  [ Kel Modderman ]
  * Replace logic for handling en_* languages correctly, this time in shell
    and not gawk.
  * Change udevtrigger coldplug subsystem-match to block from usb.
  * Make "nointro" a default cheatcode.

 -- Kel Modderman <kel@otaku42.de>  Tue, 16 Oct 2007 19:27:22 +1000

install-usb-gui (0.0.10) unstable; urgency=low

  * Use gawk to fetch list of languages via locale -a, depend on gawk.

 -- Kel Modderman <kel@otaku42.de>  Mon, 15 Oct 2007 15:23:13 +1000

install-usb-gui (0.0.9) unstable; urgency=low

  * Fix a couple of exit values that didn't use return values of commands.

 -- Kel Modderman <kel@otaku42.de>  Mon, 15 Oct 2007 08:36:29 +1000

install-usb-gui (0.0.8) unstable; urgency=low

  [ Horst Tritremmel ]
  * languge selection added/frontend
  * toram option added/frontend

  [ Kel Modderman ]
  * Catch exit value and put it into /tmp/.install_fromiso_in_USB for the gui
    to use.
  * --cheatcode option is impossible, it cannot accept a variable amount of
    arguments. Use -- ${cheatcodes} instead!

 -- Kel Modderman <kel@otaku42.de>  Mon, 15 Oct 2007 08:24:28 +1000

install-usb-gui (0.0.7) unstable; urgency=low

  * Revert 11410, adjust new manpage to be in line with work done pre-r11410.
  * Really overhaul script, mostly code style and flow.
  * Some API incompatible changes, to force improvement from gui:
    - no more --toram, --lang or --persist options
    - no storing of exit value in tmp file
  * Merge in bits from 11410.
  * Fix broken if block.
  * Expand awk code for readability.
  * Improve awk blobs used for fdisk parsing.
  * Use LC_ALL=C when parsing external program output.
  * Remove whitespace which caused sh syntax error!