@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<dock-layout><layout name="__default__"><dock name="__dock_1" floating="no" width="-1" height="-1" floatx="0" floaty="0"><paned orientation="horizontal" locked="no" position="258"><notebook orientation="vertical" locked="no" page="1"><item name="AnjutaFileManager" orientation="vertical" locked="no"/><item name="AnjutaProjectManager" orientation="vertical" locked="no"/><item name="AnjutaSymbolBrowser" orientation="vertical" locked="no"/><item name="AnjutaDevhelpIndex" orientation="vertical" locked="no"/></notebook><paned orientation="vertical" locked="no" position="532"><notebook orientation="vertical" locked="no" page="0"><item name="AnjutaDocumentManager" orientation="vertical" locked="no"/><item name="AnjutaTodoPlugin" orientation="vertical" locked="no"/></notebook><item name="AnjutaTerminal" orientation="vertical" locked="no"/></paned></paned></dock></layout></dock-layout>
+<dock-layout><layout name="__default__"><dock name="__dock_1" floating="no" width="-1" height="-1" floatx="0" floaty="0"><paned orientation="horizontal" locked="no" position="258"><notebook orientation="vertical" locked="no" page="4"><item name="AnjutaFileManager" orientation="vertical" locked="no"/><item name="AnjutaProjectManager" orientation="vertical" locked="no"/><item name="AnjutaSymbolBrowser" orientation="vertical" locked="no"/><item name="AnjutaDevhelpIndex" orientation="vertical" locked="no"/><item name="AnjutaGladeTree" orientation="vertical" locked="no"/><item name="AnjutaGladePalette" orientation="vertical" locked="no"/></notebook><paned orientation="vertical" locked="no" position="372"><notebook orientation="vertical" locked="no" page="3"><item name="AnjutaDocumentManager" orientation="vertical" locked="no"/><item name="AnjutaTodoPlugin" orientation="vertical" locked="no"/><item name="AnjutaGladeEditor" orientation="vertical" locked="no"/><item name="AnjutaGladeDesigner" orientation="vertical" locked="no"/></notebook><item name="AnjutaTerminal" orientation="vertical" locked="no"/></paned></paned></dock></layout></dock-layout>
