@@ -203,7 +203,7 @@
                     </child>
                     <child>
                       <widget class="GtkButton" id="button_cheat">
-                        <property name="width_request">150</property>
+                        <property name="width_request">200</property>
                         <property name="height_request">32</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -225,7 +225,7 @@
               <widget class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="label" translatable="yes">&lt;b&gt;Cheat codes&lt;/b&gt;</property>
+                <property name="label" translatable="yes">&lt;b&gt;Cheatcodes&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
               </widget>
               <packing>
